// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportPreview renders correctly with all errors 1`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "borderRadius": 12,
      "maxHeight": "80%",
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "color": "#111827",
        "fontSize": 18,
        "fontWeight": "700",
        "marginBottom": 12,
      }
    }
  >
    Import Preview
  </Text>
  <RCTScrollView
    accessibilityLabel="Import results"
    accessibilityRole="list"
    style={
      {
        "maxHeight": 400,
      }
    }
  >
    <View>
      <View
        accessibilityRole="text"
        style={
          [
            {
              "alignItems": "center",
              "borderBottomColor": "#E5E7EB",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 10,
            },
            {
              "backgroundColor": "#FEF2F2",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontWeight": "600",
            }
          }
        >
          Row 
          1
        </Text>
        <Text
          style={
            {
              "color": "#DC2626",
              "fontSize": 12,
            }
          }
        >
          Missing headers
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "flex-end",
        "marginTop": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 8,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#6B7280",
            "fontWeight": "600",
          }
        }
      >
        Cancel
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#9CA3AF",
          "borderRadius": 8,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontWeight": "600",
          }
        }
      >
        Confirm Merge (
        0
         rows)
      </Text>
    </View>
  </View>
</View>
`;

exports[`ImportPreview renders correctly with mixed results 1`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "borderRadius": 12,
      "maxHeight": "80%",
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "color": "#111827",
        "fontSize": 18,
        "fontWeight": "700",
        "marginBottom": 12,
      }
    }
  >
    Import Preview
  </Text>
  <RCTScrollView
    accessibilityLabel="Import results"
    accessibilityRole="list"
    style={
      {
        "maxHeight": 400,
      }
    }
  >
    <View>
      <View
        accessibilityRole="text"
        style={
          [
            {
              "alignItems": "center",
              "borderBottomColor": "#E5E7EB",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 10,
            },
            {
              "backgroundColor": "#F0FDF4",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontWeight": "600",
            }
          }
        >
          Row 
          1
        </Text>
        <Text
          style={
            {
              "color": "#16A34A",
              "fontWeight": "600",
            }
          }
        >
          ✓ Valid
        </Text>
      </View>
      <View
        accessibilityRole="text"
        style={
          [
            {
              "alignItems": "center",
              "borderBottomColor": "#E5E7EB",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 10,
            },
            {
              "backgroundColor": "#FEF2F2",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontWeight": "600",
            }
          }
        >
          Row 
          2
        </Text>
        <Text
          style={
            {
              "color": "#DC2626",
              "fontSize": 12,
            }
          }
        >
          Invalid quantity
        </Text>
      </View>
      <View
        accessibilityRole="text"
        style={
          [
            {
              "alignItems": "center",
              "borderBottomColor": "#E5E7EB",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 10,
            },
            {
              "backgroundColor": "#F0FDF4",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontWeight": "600",
            }
          }
        >
          Row 
          3
        </Text>
        <Text
          style={
            {
              "color": "#16A34A",
              "fontWeight": "600",
            }
          }
        >
          ✓ Valid
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "flex-end",
        "marginTop": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 8,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#6B7280",
            "fontWeight": "600",
          }
        }
      >
        Cancel
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#16A34A",
          "borderRadius": 8,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontWeight": "600",
          }
        }
      >
        Confirm Merge (
        2
         rows)
      </Text>
    </View>
  </View>
</View>
`;
